hphp/test/zend/bad/ext-spl/bug40442.php
<?php
$a = new ArrayObject();
$a->offsetSet('property', 0);
var_dump($a->offsetExists('property'));
?>
===DONE===